Bug 1274161 - Do not abort the transaction twice if the IDBRequest is failed due to the abortion of its transaction. r=khuey